Added some changes to css like border

--- a/index.html
+++ b/index.html
@@ -9,10 +9,12 @@
 </head>
 <body>
     <header>
-        <h1 class="title">My Portfolio</h1>       
+        <h1 class="title">My Portfolio</h1>
+        <a href="index.html">Portfolio</a>       
     </header>
     <main>
-        <p class="paragraph">Hello my name is anish.</p>
+        <h3 class="title">Description</h3>
+        <p class="paragraph">Hello my name is Anish. </p>
     </main>
     
 </body>
